MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/SA_Cases_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>SA Cases Mapping</label>
    <pluralLabel>SA Cases Mappings</pluralLabel>
</CustomObject>