MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>