MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <label>Request Category</label>
    <length>150</length>
    <type>Text</type>
</CustomField>