MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>