MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>