MODON MRE BPDEV/force-app/main/default/objects/SA_Cases_Mapping__mdt/listViews/ALL_Fields.listView-meta.xml
<ListView>
    <fullName>ALL_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Origin__c</columns>
    <columns>Source__c</columns>
    <columns>Channel__c</columns>
    <columns>Request_Category__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Sub_Vertical__c</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL_Fields</label>
</ListView>